--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,9 +43,15 @@ datastore = "1.1.1" # DataStore Preferences versiyonu (En güncelini kontrol edi
 # Google Places
 places = "3.4.0" # Google Places SDK versiyonu (En güncelini kontrol edin)
 
+# AndroidX WorkManager
+androidxWork = "2.9.0" # Veya en son stabil versiyon
+
 # Testing
 junit = "4.13.2"
 playServicesLocation = "21.3.0"
+workRuntimeKtx = "2.10.1"
+runtimeLivedata = "1.8.2"
+firebaseCrashlyticsBuildtools = "3.0.4"
 
 [libraries]
 # AndroidX Core & Activity
@@ -58,6 +64,9 @@ androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "l
 
 # AndroidX Navigation
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
+
+# AndroidX WorkManager
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "androidxWork" }
 
 # Compose
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
@@ -76,6 +85,7 @@ firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx" 
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx" } # Versiyon BOM'dan
 firebase-functions-ktx = { group = "com.google.firebase", name = "firebase-functions-ktx" } # Versiyon BOM'dan
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx" } # YENİ: Firebase Storage (Versiyon BOM'dan)
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging-ktx" } # Firebase Cloud Messaging (Versiyon BOM'dan)
 
 # Coil
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" } # YENİ: Coil Compose
@@ -106,7 +116,10 @@ androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxEspresso" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" } # Versiyon Compose BOM'dan
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" } # Versiyon Compose BOM'dan
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" } # Versiyon Compose BOM'dan
 
 
 [plugins]
